# claude-api-proxy

./: .dockerignore  .gitignore  CONVERSION_REFERENCE.md  Dockerfile  README.md  build.py  publish.bat  publish.sh
.github/workflows/: docker-publish.yml  release-windows.yml
backend/: auth.py  build-requirements.txt  config_manager.py  main.py  requirements.txt  run.py
backend-rust/: Cargo.toml
backend-rust/src/: auth.rs  cache_injector.rs  config.rs  main.rs
backend-rust/src/converters/: gemini_conv.rs  mod.rs  openai_conv.rs  openai_responses_conv.rs
backend/converters/: gemini_conv.py  openai_conv.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  api.ts  types.ts
frontend/src/components/: ModelMappings.vue  ProviderList.vue  ServerInfo.vue
