[package]
name = "claude-api-proxy"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
base64 = "0.22"
futures = "0.3"
tokio-stream = "0.1"
bytes = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
